<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ViewTeacher">

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="404dp"
        android:layout_height="47dp"
        android:layout_marginTop="200dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="207dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/id"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/viewId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="404dp"
        android:layout_height="47dp"
        android:layout_marginTop="25dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/viewAll"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/view_all"
                android:onClick="viewAll"
                android:text="@string/view_all"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <Button
                android:id="@+id/viewById"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/view_by_id"
                android:onClick="viewById"
                android:text="@string/view_by_id"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout121"
        android:layout_width="404dp"
        android:layout_height="47dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout11">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/view_all_department"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/view_all"
                android:onClick="back"
                android:text="@string/view_all_department"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <Button
                android:id="@+id/view_department_by_id"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_button"
                android:backgroundTint="@color/view_by_id"
                android:text="@string/view_department_by_id"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout12"
        android:layout_width="404dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="294dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout121">

        <Button
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_button"
            android:backgroundTint="@color/cancel"
            android:onClick="back"
            android:text="@string/back"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>