<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".DeleteTeacher">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="409dp"
        android:layout_height="54dp"
        android:layout_marginTop="103dp"
        android:layout_marginEnd="6dp"
        android:text="@string/teacher_delete"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout10"
        android:layout_width="404dp"
        android:layout_height="47dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="207dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:text="@string/id"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/deleteId"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout11"
        android:layout_width="404dp"
        android:layout_height="47dp"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="453dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/remove"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/delete"
                android:background="@drawable/custom_button"
                android:onClick="remove"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:textSize="24sp" />

            <Button
                android:id="@+id/back"
                android:layout_width="203dp"
                android:layout_height="match_parent"
                android:backgroundTint="@color/cancel"
                android:background="@drawable/custom_button"
                android:onClick="back"
                android:text="@string/back"
                android:textColor="@color/white"
                android:textSize="24sp" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>